2007-11-07  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclIO.c (TclGetsObjBinary): add an efficient binary path
	for [gets].
	(DoWriteChars): special case for 1-byte channel write.

2007-11-06  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclEncoding.c: Version of the embedded iso8859-1
	encoding handler that is faster (functions to do the encoding know
	exactly what they're doing instead of pulling it from a table,
	though the table itself has to be retained for use by shift
	encodings that depend on iso8859-1.) [Patch 1826906], committing
	for dkf.
	
2007-11-05  Andreas Kupries  <andreask@activestate.com>

	* generic/tclConfig.c (Tcl_RegisterConfig): Modified to not extend
	  the config database if the encoding provided by the user is not
	  found (venc == NULL). Scripts expecting the data will error out,
	  however we neither crash nor provide bogus information. See [SF
	  Tcl Bug 983509] for more discussion.

2007-11-05  Andreas Kupries <andreask@activestate.com>

	* unix/tclUnixChan.c (TtyGetOptionProc): Accepted [SF Tcl Patch
	  1823576] provided by Stuart Cassof <stwo@users.sourceforge.net>.
	  The patch adds the necessary utf/external conversions to the
	  handling of the arguments of option -xchar which will allow the
	  use of \0 and similar characters.

2007-11-03  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclTest.c (TestSetCmd2):
	* generic/tclVar.c (TclObjLookupVarEx): 
	* tests/set.test (set-5.1): fix error branch when array name looks
	like array element (code not normally exercised). 
	
2007-11-01  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* tools/tcltk-man2html.tcl (output-directive): Convert .DS/.DE pairs
	into tables since that is now all that they are used for.

	* doc/RegExp.3: Clarified documentation of RE flags. [Bug 1167840]

	* doc/refchan.n: Adjust internal name to be consistent with the file
	name for reduced user confusion. After comment by Dan Steffen.
